Alignment and color fixes

--- a/src/index.css
+++ b/src/index.css
@@ -6,18 +6,25 @@
   width: 100%;
   margin-bottom: 20px;
   text-align: center;
-  font-size: 0.9rem;
+  line-height: 1.4;
   z-index: 1;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 320px) and (min-height: 568px) {
+  .footer {
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 475px) {
   .footer {
     font-size: 1.2rem;
   }
 }
 
 .footer .footer__link {
-  color: #1d1d1d;
+  color: #f15bb5;
+  text-shadow: 1px 1px #003459;
   text-decoration: none;
 }
 
@@ -26,31 +33,74 @@
 }
 
 .header {
-  font-style: italic;
-  font-weight: 200;
-  font-size: 3rem;
-  padding: 15px 0 15px;
-  background: #1d1d1d;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: 0 auto;
 }
 
-@media (min-width: 500px) {
-  .header {
-    font-size: 4rem;
-    padding: 30px;
+.header img.header__img {
+  display: none;
+  max-width: 60px;
+  max-height: 60px;
+  margin: 0 auto 0 auto;
+}
+
+.header .header__title {
+  display: inline-block;
+  text-align: center;
+  font-style: italic;
+  font-weight: 800;
+  font-size: 3.5rem;
+  color: #f15bb5;
+  background: #003459;
+  text-shadow: 3px 3px #00bbf9, 6px 6px #00f5d4, 9px 9px #fee440, 12px 12px #9b5de5;
+  padding: 80px 0 10px;
+}
+
+@media (min-width: 320px) and (min-height: 568px) {
+  .header .header__title {
+    font-size: 3rem;
+    padding: 20px 0 10px;
+  }
+}
+
+@media (min-width: 375px) and (min-height: 667px) {
+  .header .header__title {
+    font-size: 3.8rem;
+    padding: 50px 0 10px;
+  }
+}
+
+@media (min-width: 375px) and (min-height: 812px) {
+  .header .header__title {
+    font-size: 3.8rem;
+    padding: 120px 0 10px;
   }
 }
 
 @media (min-width: 700px) {
-  .header {
+  .header .header__title {
     font-size: 5rem;
-    padding: 30px;
+    padding: 140px 0 10px;
   }
 }
 
-@media (min-width: 900px) {
-  .header {
+@media (min-width: 850px) {
+  .header .header__title {
     font-size: 6rem;
-    padding: 30px;
+    padding: 30px 0 10px;
   }
 }
 
@@ -65,10 +115,8 @@
   z-index: 1;
 }
 
-.app {
-  background-color: #307dbd;
-  height: 100vh;
-  width: 100vw;
+.fa-palette {
+  color: red;
 }
 
 .card {
@@ -103,12 +151,13 @@
 
 .card .card__outer-container .card__tagline {
   color: #f1f1f1;
-  margin: 20px 0;
+  margin-bottom: 20px;
   font-size: 1.5rem;
 }
 
 @media (min-width: 500) {
   .card .card__outer-container .card__tagline {
+    margin: 20px 0;
     font-size: 2.2rem;
   }
 }
@@ -120,21 +169,47 @@
 
 .card .card__outer-container .card__inner-container .card__color-swatch {
   border: 2px solid #f1f1f1;
+  -webkit-box-shadow: 4px 4px #f1f1f1;
+          box-shadow: 4px 4px #f1f1f1;
   -ms-flex-item-align: start;
       -ms-grid-row-align: start;
       align-self: start;
   border-radius: 5px 40px;
   background-clip: padding-box;
   background-color: #ffffff;
-  height: 300px;
-  width: 300px;
+  height: 180px;
+  width: 180px;
+}
+
+@media only screen and (min-width: 500px) {
+  .card .card__outer-container .card__inner-container .card__color-swatch {
+    height: 300px;
+    width: 300px;
+  }
 }
 
 .card .card__outer-container .card__color-code {
-  margin: 10px;
+  border: 2px solid #f1f1f1;
+  -webkit-box-shadow: 4px 4px #f1f1f1;
+          box-shadow: 4px 4px #f1f1f1;
+  margin: 20px 0;
+  padding: 5px 0;
   font-size: 1.2rem;
   font-weight: 400;
   text-transform: uppercase;
   color: #f1f1f1;
+}
+
+@media (min-width: 500) {
+  .card .card__outer-container .card__color-code {
+    margin: 10px 0;
+    padding: 10px 0;
+  }
+}
+
+.app {
+  background-color: #003459;
+  height: 100vh;
+  width: 100vw;
 }
 /*# sourceMappingURL=index.css.map */
