--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,19 +1,24 @@
+@import "./colors";
+
 .footer {
-  color: #f1f1f1;
+  color: $ColorLight;
   position: absolute;
   left: 0;
   bottom: 0;
   width: 100%;
   margin-bottom: 20px;
   text-align: center;
-  font-size: 0.9rem;
+  line-height: 1.4;
   z-index: 1;
-  @media (min-width: 500px) {
+  @media (min-width: 320px) and (min-height: 568px) {
+    font-size: 1rem;
+  }
+  @media (min-width: 475px) {
     font-size: 1.2rem;
   }
   .footer__link {
-    // color: rgb(252, 140, 215);
-    color: #1d1d1d;
+    color: $ColorBrand;
+    text-shadow: 1px 1px $ColorDark;
     text-decoration: none;
     &:hover {
       text-decoration: underline;
