--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,19 +1,48 @@
+@import "./colors";
+
 .header {
-  font-style: italic;
-  font-weight: 200;
-  font-size: 3rem;
-  padding: 15px 0 15px;
-  background: #1d1d1d;
-  @media (min-width: 500px) {
-    font-size: 4rem;
-    padding: 30px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-around;
+  margin: 0 auto;
+  // ! Fix Alignment with Header
+  img.header__img {
+    display: none;
+    max-width: 60px;
+    max-height: 60px;
+    margin: 0 auto 0 auto;
   }
-  @media (min-width: 700px) {
-    font-size: 5rem;
-    padding: 30px;
-  }
-  @media (min-width: 900px) {
-    font-size: 6rem;
-    padding: 30px;
+  .header__title {
+    display: inline-block;
+    text-align: center;
+    font-style: italic;
+    font-weight: 800;
+    font-size: 3.5rem;
+    color: $ColorBrand;
+    background: $ColorDark;
+    text-shadow: 3px 3px #00bbf9, 6px 6px #00f5d4, 9px 9px #fee440, 12px 12px #9b5de5;
+    padding: 80px 0 10px;
+    @media (min-width: 320px) and (min-height: 568px) {
+      font-size: 3rem;
+      padding: 20px 0 10px;
+    }
+    @media (min-width: 375px) and (min-height: 667px) {
+      font-size: 3.8rem;
+      padding: 50px 0 10px;
+    }
+    @media (min-width: 375px) and (min-height: 812px) {
+      font-size: 3.8rem;
+      padding: 120px 0 10px;
+    }
+    @media (min-width: 700px) {
+      font-size: 5rem;
+      padding: 140px 0 10px;
+    }
+    @media (min-width: 850px) {
+      font-size: 6rem;
+      padding: 30px 0 10px;
+    }
   }
 }
